modified:   lab-two.html

--- a/lab-two.html
+++ b/lab-two.html
@@ -22,7 +22,7 @@
     <section id="about-us">
       <h4 style="margin-bottom: -7px;">About Us</h4>
       <p>We are a company dedicated to providing excellent services to our customers.</p>
-      <img src="images/about_us.jpg" alt="600x400">
+      <img src="images/about_us.jpg" alt="about us">
     </section>
 
     <h4 style="align-self: center;">Our Services</h4>
@@ -30,12 +30,12 @@
       <article id="webdev">
         <h4 style="margin-bottom: -7px; margin-top: -1px;">Web Development</h4>
         <p style="font-size: small;">We specialize in creating responsive and user friendly websites.</p>
-        <img src="images/webdev.jpg" alt="600x400">
+        <img src="images/webdev.jpg" alt="Web Development">
       </article>
       <article id="design">
         <h4 style="margin-bottom: -7px; margin-top: -1px;">Graphic Design</h4>
         <p style="font-size: small;">Our talented designers can bring your ideas to life with stunning visuals.</p>
-        <img src="images/design.jpeg" alt="600x400">
+        <img src="images/design.jpeg" alt="Graphic Design">
       </article>
     </section>
 
