modified:   lab-two.html

--- a/lab-two.html
+++ b/lab-two.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <title>lab-2</title>
+  <title>lab-two</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
   <header id="navbar">
     <h4 style="margin-left: 40px;">Welcome to Software Design Website</h4>    
@@ -17,14 +15,12 @@
       </ul>
     </nav>
   </header>
-
   <main style="display: flex; flex-direction: column; justify-content: center;">
     <section id="about-us">
       <h4 style="margin-bottom: -7px;">About Us</h4>
       <p>We are a company dedicated to providing excellent services to our customers.</p>
       <img src="images/about_us.jpg" alt="about us">
     </section>
-
     <h4 style="align-self: center;">Our Services</h4>
     <section id="services">
       <article id="webdev">
@@ -38,9 +34,7 @@
         <img src="images/design.jpeg" alt="Graphic Design">
       </article>
     </section>
-
   </main>
-
   <footer>
     <p style="font-size: small;">©2024 The Lucky Company. All rights reserved.</p>
   </footer>
